--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -11,12 +11,21 @@
  <ul>
    <% @list.tasks.each do |task| %>
    <li>
-    <%= task.description %> |
+
+    <%= task.description %> | Done? <%= task.done %> |
     <%= link_to "Edit", edit_list_task_path(@list, task) %> |
     <%= link_to "Delete", list_task_path(@list, task),
                              :data => {:confirm => "You sure?",
                                           :method => "delete"} %>
-   </li>
+
+
+  </li>
+
+    <%= form_for [@list, task] do |f| %>
+      <%= f.hidden_field :done, :value => true %>
+      <%= f.submit "Done" %>
+    <% end %>
+
    <% end %>
  </ul>
 
